--- a/apps/studio/variableOverrides.css
+++ b/apps/studio/variableOverrides.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap');
 
 :root {
-    --brand-primary: '#ffcb19';
-    --brand-secondary: '#fde047';
+    --brand-primary: #ffcb19;
+    --brand-secondary: #fde047;
     --font-family-base: 'Montserrat';
 
     --main-navigation-color: var(--brand-primary);
