changing colors of studio

--- a/apps/studio/variableOverrides.css
+++ b/apps/studio/variableOverrides.css
@@ -1,7 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Fjalla+One');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap');
 
 :root {
-    --brand-primary: #81a76d;
-    --brand-secondary: #95bf6f;
-    --font-family-base: 'Fjalla One';
+    --brand-primary: #ffcb19;
+    --brand-secondary: #fde047;
+    --font-family-base: 'Montserrat';
+
+    --main-navigation-color: var(--brand-primary);
+    --main-navigation-color--inverted: color(var(--main-navigation-color) contrast(80%));
+    --main-navigation-color--inverted-muted: color(
+        var(--main-navigation-color) blend(var(--main-navigation-color--inverted) 70%)
+    );
 }
