--- a/apps/web/src/styles/fonts.css
+++ b/apps/web/src/styles/fonts.css
@@ -10,24 +10,21 @@
     font-style: italic;
     font-weight: 100;
     font-display: swap;
-    src: url(/fonts/editorial-new/editorial-new-thin-italic.woff2)
-        format('woff2');
+    src: url(/fonts/editorial-new/editorial-new-thin-italic.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Editorial New';
     font-style: normal;
     font-weight: 200;
     font-display: swap;
-    src: url(/fonts/editorial-new/editorial-new-ultralight.woff2)
-        format('woff2');
+    src: url(/fonts/editorial-new/editorial-new-ultralight.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Editorial New';
     font-style: italic;
     font-weight: 200;
     font-display: swap;
-    src: url(/fonts/editorial-new/editorial-new-ultralight-italic.woff2)
-        format('woff2');
+    src: url(/fonts/editorial-new/editorial-new-ultralight-italic.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Editorial New';
@@ -41,8 +38,7 @@
     font-style: italic;
     font-weight: 300;
     font-display: swap;
-    src: url(/fonts/editorial-new/editorial-new-light-italic.woff2)
-        format('woff2');
+    src: url(/fonts/editorial-new/editorial-new-light-italic.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Editorial New';
@@ -70,8 +66,7 @@
     font-style: italic;
     font-weight: 500;
     font-display: swap;
-    src: url(/fonts/editorial-new/editorial-new-medium-italic.woff2)
-        format('woff2');
+    src: url(/fonts/editorial-new/editorial-new-medium-italic.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Editorial New';
@@ -85,8 +80,7 @@
     font-style: italic;
     font-weight: 700;
     font-display: swap;
-    src: url(/fonts/editorial-new/editorial-new-bold-italic.woff2)
-        format('woff2');
+    src: url(/fonts/editorial-new/editorial-new-bold-italic.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Editorial New';
@@ -100,8 +94,7 @@
     font-style: italic;
     font-weight: 800;
     font-display: swap;
-    src: url(/fonts/editorial-new/editorial-new-ultrabold-italic.woff2)
-        format('woff2');
+    src: url(/fonts/editorial-new/editorial-new-ultrabold-italic.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Editorial New';
@@ -115,8 +108,7 @@
     font-style: italic;
     font-weight: 900;
     font-display: swap;
-    src: url(/fonts/editorial-new/editorial-new-heavy-italic.woff2)
-        format('woff2');
+    src: url(/fonts/editorial-new/editorial-new-heavy-italic.woff2) format('woff2');
 }
 
 @font-face {
@@ -131,8 +123,7 @@
     font-style: italic;
     font-weight: 100;
     font-display: swap;
-    src: url(/fonts/neue-montreal/neue-montreal-thin-italic.woff2)
-        format('woff2');
+    src: url(/fonts/neue-montreal/neue-montreal-thin-italic.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Neue Montreal';
@@ -146,8 +137,7 @@
     font-style: italic;
     font-weight: 200;
     font-display: swap;
-    src: url(/fonts/neue-montreal/neue-montreal-light-italic.woff2)
-        format('woff2');
+    src: url(/fonts/neue-montreal/neue-montreal-light-italic.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Neue Montreal';
@@ -161,8 +151,7 @@
     font-style: italic;
     font-weight: 300;
     font-display: swap;
-    src: url(/fonts/neue-montreal/neue-montreal-book-italic.woff2)
-        format('woff2');
+    src: url(/fonts/neue-montreal/neue-montreal-book-italic.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Neue Montreal';
@@ -190,8 +179,7 @@
     font-style: italic;
     font-weight: 500;
     font-display: swap;
-    src: url(/fonts/neue-montreal/neue-montreal-medium-italic.woff2)
-        format('woff2');
+    src: url(/fonts/neue-montreal/neue-montreal-medium-italic.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Neue Montreal';
@@ -212,16 +200,14 @@
     font-style: italic;
     font-weight: 700;
     font-display: swap;
-    src: url(/fonts/neue-montreal/neue-montreal-bold-italic.woff2)
-        format('woff2');
+    src: url(/fonts/neue-montreal/neue-montreal-bold-italic.woff2) format('woff2');
 }
 @font-face {
     font-family: 'Neue Montreal';
     font-style: italic;
     font-weight: 700;
     font-display: swap;
-    src: url(/fonts/neue-montreal/neue-montreal-bold-italic.woff2)
-        format('woff2');
+    src: url(/fonts/neue-montreal/neue-montreal-bold-italic.woff2) format('woff2');
 }
 
 @font-face {
