--- a/apps/web/src/styles/styles.css
+++ b/apps/web/src/styles/styles.css
@@ -66,6 +66,12 @@ summary::-webkit-details-marker {
     display: none;
 } */
 
+@layer base {
+    body {
+        @apply bg-stone-100 text-stone-900;
+    }
+}
+
 @layer components {
     .tw-transition {
         @apply transition duration-300 ease-in-out;
