--- a/apps/web/src/styles/styles.css
+++ b/apps/web/src/styles/styles.css
@@ -82,7 +82,7 @@ summary::-webkit-details-marker {
         -webkit-tap-highlight-color: transparent;
     }
     .tw-subheading {
-        @apply text-4xl font-bold uppercase md:text-5xl;
+        @apply font-serif text-4xl font-bold uppercase md:text-5xl;
     }
     .tw-summary {
         @apply prose font-serif prose-p:text-lg md:prose-p:text-3xl;
