--- a/apps/web/src/styles/styles.css
+++ b/apps/web/src/styles/styles.css
@@ -23,7 +23,7 @@
         -webkit-tap-highlight-color: transparent;
     }
     .tw-subheading {
-        @apply mb-6 font-serif text-4xl font-bold uppercase md:text-5xl lg:mb-12;
+        @apply mb-6 font-serif text-5xl font-bold uppercase lg:mb-12 lg:text-6xl;
     }
     .tw-summary {
         @apply prose font-serif prose-p:text-lg md:prose-p:text-3xl;
